--- a/css/main.css
+++ b/css/main.css
@@ -286,7 +286,8 @@ a {
     transition: color 0.3s ease;
 }
 
-.footer-link:hover, .social-link:hover {
+.footer-link:hover,
+.social-link:hover {
     color: #30C88F;
 }
 
@@ -312,4 +313,51 @@ a {
     width: 400px;
     margin: 150px auto 0;
     background-color: #fff;
+    position: relative;
+    padding: 25px 15px;
+    text-align: center;
+}
+
+#closeModal {
+    padding: 5px 7px;
+    border: transparent;
+    border-radius: 10px;
+    background: linear-gradient(-45deg, #FFA63D, #FF3D77, #338AFF, #3CF0C5);
+    cursor: pointer;
+    position: absolute;
+    right: 15px;
+    top: 15px;
+}
+
+.close{
+    width: 18px;
+}
+
+.contact-form{
+    margin-top: 25px;
+}
+
+.modal-input{
+    display: block;
+    width: 100%;
+    height: 40px;
+    margin-bottom: 15px;
+    outline: transparent;
+    border: 1px solid transparent;
+}
+
+.modal-input:focus{
+    border: 1px solid #2FC697;
+    border-radius: 20px;
+}
+
+.send{
+    padding: 7px 17px;
+    border: transparent;
+    border-radius: 10px;
+    background: linear-gradient(-45deg, #FFA63D, #FF3D77, #338AFF, #3CF0C5);
+    cursor: pointer;
+    font-size: 1.2rem;
+    color: indigo;
+    font-weight: 700;
 }
